# NewOpenGLBeginning

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md
OpenGLProject/: CMakeLists.txt
OpenGLProject/include/glad/: glad.h
OpenGLProject/include/header/proprietary/: Application.hpp  Camera.hpp  FrameBuffer.hpp  Model.hpp  Program.hpp  helper.hpp
OpenGLProject/include/proprietary/: Application.hpp  Camera.hpp  FrameBuffer.hpp  Mesh.hpp  Model.hpp  Program.hpp  Shadow.hpp  Skybox.hpp
OpenGLProject/shaders/Skybox_shaders/: fragmentshader.glsl  vertexshader.glsl
OpenGLProject/shaders/blinn_phong_shaders/: vertexshader.glsl
OpenGLProject/shaders/floor_shaders/: fragmentshader.glsl  vertexshader.glsl
OpenGLProject/shaders/frame_buffer_shaders/: fragmentshader.glsl
OpenGLProject/shaders/grid_shaders/: fragmentshader.glsl  vertexshader.glsl
OpenGLProject/shaders/instanced_model_shaders/: fragmentshader.glsl  vertexshader.glsl
OpenGLProject/shaders/light_source_shaders/: fragmentshader.glsl  vertexshader.glsl
OpenGLProject/shaders/model_shaders/: fragmentshader.glsl  geometryshader.glsl  vertexshader.glsl
OpenGLProject/shaders/past_shaders/: fragmentshader.glsl  vertexshader.glsl
OpenGLProject/shaders/primitive_shaders/: fragmentshader.glsl  vertexshader.glsl
OpenGLProject/shaders/shadow_shaders/: fragmentshader.glsl
OpenGLProject/src/: Application.cpp  Camera.cpp  FrameBuffer.cpp  Mesh.cpp  Model.cpp  Program.cpp  glad.c  main.cpp
OpenGLProject/src/propritary/: Application.cpp  Camera.cpp  FrameBuffer.cpp  Mesh.cpp  Model.cpp  Program.cpp  Shadow.cpp  Skybox.cpp  main.cpp  stbi_image.cpp
